--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.0",
+    "react": "^15.4.2",
     "react-bootstrap": "^0.30.7",
+    "react-dom": "^15.4.2",
     "webpack": "^2.2.1"
   }
 }
