--- a/.eslintrc
+++ b/.eslintrc
@@ -8,5 +8,8 @@
   },
   "extends": ["airbnb"],
   "plugins": ["react"],
-  "rules": { "import/no-unresolved": 0 }
+  "rules": {
+    "import/no-unresolved": 0,
+    "no-underscore-dangle": "off"
+  }
 }
