--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,7 @@
   "plugins": ["react"],
   "rules": {
     "import/no-unresolved": 0,
-    "no-underscore-dangle": "off"
+    "no-underscore-dangle": "off",
+    "no-console": ["error", { allow: ["warn"] }]
   }
 }
