--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
     "react-bootstrap": ">=0.30.0",
     "react-dom": ">=0.14.0"
   },
+  "homepage": "https://github.com/kevinzwhuang/react-bootstrap-modal-provider",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kevinzwhuang/react-bootstrap-modal-provider.git"
+  },
   "author": "Kevin Huang <kevin.ziwen.huang@gmail.com>",
   "license": "MIT",
   "devDependencies": {
