Update dependencies and bump to version 2.0.0

--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,7 @@
     "browser": true,
     "node": true
   },
-  "extends": ["airbnb"],
+  "extends": ["airbnb", "prettier", "plugin:react-hooks/recommended"],
   "plugins": ["react"],
   "rules": {
     "import/no-unresolved": 0,
