--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
   "name": "react-bootstrap-modal-provider",
-  "version": "0.1.2",
+  "version": "2.0.0",
   "description": "React-Bootstrap-Modal-Provider is a React Component that renders React-Bootstrap modals more performantly with less markup.",
   "main": "dist/react-bootstrap-modal-provider.js",
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "scripts": {
     "lint": "node_modules/.bin/eslint ./src",
     "build:dev": "node_modules/.bin/webpack",
@@ -14,9 +12,8 @@
     "prepare": "npm run build"
   },
   "peerDependencies": {
-    "react": ">=0.14.0",
-    "react-bootstrap": ">=0.30.0",
-    "react-dom": ">=0.14.0"
+    "react": ">=16.0.0",
+    "react-bootstrap": ">=0.30.0"
   },
   "homepage": "https://github.com/kevinzwhuang/react-bootstrap-modal-provider",
   "repository": {
@@ -26,22 +23,26 @@
   "author": "Kevin Huang <kevin.ziwen.huang@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "babel-core": "^6.23.1",
-    "babel-loader": "^6.3.2",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.23.0",
-    "eslint": "^3.16.1",
-    "eslint-config-airbnb": "^14.1.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.10.0",
-    "react": "^15.4.2",
-    "react-bootstrap": "^0.30.7",
-    "react-dom": "^15.4.2",
-    "webpack": "^2.2.1"
+    "@babel/core": "^7.10.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.10.3",
+    "@babel/preset-env": "^7.10.3",
+    "@babel/preset-react": "^7.10.1",
+    "babel-loader": "^8.1.0",
+    "eslint": "^7.3.1",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^4.0.4",
+    "prettier": "^2.0.5",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-bootstrap": "^0.33.1",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12"
   },
   "dependencies": {
-    "prop-types": "^15.6.0"
+    "prop-types": "^15.7.2"
   }
 }
