--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "react-bootstrap-modal-provider",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "React-Bootstrap-Modal-Provider is a React Component that renders React-Bootstrap modals more performantly with less markup.",
   "main": "dist/react-bootstrap-modal-provider.js",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "lint": "node_modules/.bin/eslint ./src",
     "build:dev": "node_modules/.bin/webpack",
@@ -37,8 +39,8 @@
     "eslint-plugin-react-hooks": "^4.0.4",
     "prettier": "^2.0.5",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1",
     "react-bootstrap": "^0.33.1",
+    "react-dom": "^16.13.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12"
   },
