--- a/examples/nested/package.json
+++ b/examples/nested/package.json
@@ -5,22 +5,25 @@
   },
   "dependencies": {
     "express": "^4.15.2",
-    "react": "^15.4.2",
-    "react-bootstrap": "^0.30.8",
-    "react-bootstrap-modal-provider": "file:../../",
-    "react-dom": "^15.4.2"
+    "react": "^16.13.1",
+    "react-bootstrap": "^0.33.1",
+    "react-bootstrap-modal-provider": "2.0.3",
+    "react-dom": "^16.13.1"
   },
   "devDependencies": {
-    "babel-core": "^6.24.0",
-    "babel-loader": "^6.4.1",
-    "babel-preset-es2015": "^6.24.0",
-    "babel-preset-react": "^6.23.0",
-    "eslint": "^3.17.1",
-    "eslint-config-airbnb": "^14.1.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.10.0",
-    "webpack": "^2.2.1",
-    "webpack-dev-middleware": "^1.10.1"
+    "@babel/core": "^7.10.3",
+    "@babel/preset-env": "^7.10.3",
+    "@babel/preset-react": "^7.10.1",
+    "babel-loader": "^8.1.0",
+    "eslint": "^7.3.1",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^4.0.4",
+    "prettier": "^2.0.5",
+    "webpack": "^4.29.6",
+    "webpack-dev-middleware": "^3.7.2"
   }
 }
